samples/_failures_safe/1761538590_a98db8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fedacb2e.c:180:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  180 | const char* token_type_name
      | ^~~~~
